--- a/credential.rc
+++ b/credential.rc
@@ -1,3 +1,3 @@
 export username=maximiliano.garcia-atos.net
-export password='wQiDJxv6Q9eY'
+export password='Xa2OsWd!9z?Tr'
 export uri=https://labs.opentlc.com
