--- a/roles/config-tower/tasks/post-config-tower.yml
+++ b/roles/config-tower/tasks/post-config-tower.yml
@@ -55,7 +55,7 @@
     tower_username: admin
     tower_password: r3dh4t!
     tower_verify_ssl: no
-    ssh_key_data: /root/.ssh/mykey.pem
+    ssh_key_data: "{{ lookup('file','/root/.ssh/openstack.pem')}}" 
     username: "{{ opentlc_login }}"
 
 - name: Remove secret
